fixed minor layout issues for main content. Planning on changing layout soon

--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -110,7 +110,10 @@
 // SEARCH RESULTS
 
 .results {
-    background-color: green;
+    // TODO: Edit border
+    border: 1px solid var(--color-grey-dark-1);
+    background-color: var(--color-grey-light-3);
+    padding: 3rem 1rem;
 }
 
 
