--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -3,11 +3,10 @@
 //------------------------------------------------// 
 
 .container {
-    background-color: var(--color-grey-light-4);
-    
+    background-color: var(--color-white-3);
     display: grid;
     grid-template-columns: [full-start] minmax(5rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(5rem, 1fr) [full-end];
-    grid-row-gap: 5rem;
+    grid-row-gap: 1.5rem;
 
 }
 
@@ -33,6 +32,8 @@
     grid-column: center-start / center-end;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(10rem, auto);
+    grid-column-gap: 1.5rem;
     min-height: 50rem;
 }
 
